bindings/c/include/wickra.h

typedef struct LinRegIntercept LinRegIntercept;
typedef struct LinRegSlope LinRegSlope;
typedef struct LogReturn LogReturn;
typedef struct M2Measure M2Measure;
typedef struct MacdHistogram MacdHistogram;
typedef struct MartinRatio MartinRatio;
typedef struct MaxDrawdown MaxDrawdown;
typedef struct McGinleyDynamic McGinleyDynamic;
typedef struct MedianAbsoluteDeviation MedianAbsoluteDeviation;
typedef struct MedianMa MedianMa;
typedef struct MidPoint MidPoint;
typedef struct Mom Mom;
typedef struct OmegaRatio OmegaRatio;
typedef struct PainIndex PainIndex;
typedef struct PercentB PercentB;
typedef struct PercentageTrailingStop PercentageTrailingStop;
typedef struct Pmo Pmo;
typedef struct PolarizedFractalEfficiency PolarizedFractalEfficiency;
double wickra_lin_reg_intercept_update(struct LinRegIntercept *handle, double value);
void wickra_lin_reg_intercept_batch(struct LinRegIntercept *handle,
                                    const double *input,
                                    double *out,
                                    uintptr_t n);
void wickra_lin_reg_intercept_reset(struct LinRegIntercept *handle);
void wickra_lin_reg_intercept_free(struct LinRegIntercept *handle);
struct LinRegSlope *wickra_lin_reg_slope_new(uintptr_t period);
double wickra_lin_reg_slope_update(struct LinRegSlope *handle, double value);
void wickra_lin_reg_slope_batch(struct LinRegSlope *handle,
                                const double *input,
                                double *out,
                                uintptr_t n);
void wickra_lin_reg_slope_reset(struct LinRegSlope *handle);
void wickra_lin_reg_slope_free(struct LinRegSlope *handle);
struct LogReturn *wickra_log_return_new(uintptr_t period);
double wickra_log_return_update(struct LogReturn *handle, double value);
void wickra_log_return_batch(struct LogReturn *handle,
                             const double *input,
                             double *out,
                             uintptr_t n);
void wickra_log_return_reset(struct LogReturn *handle);
void wickra_log_return_free(struct LogReturn *handle);
struct M2Measure *wickra_m2_measure_new(uintptr_t period,
                                        double risk_free,
                                        double benchmark_stddev);
double wickra_m2_measure_update(struct M2Measure *handle, double value);
void wickra_m2_measure_batch(struct M2Measure *handle,
                             const double *input,
                             double *out,
                             uintptr_t n);
void wickra_m2_measure_reset(struct M2Measure *handle);
void wickra_m2_measure_free(struct M2Measure *handle);
struct MacdHistogram *wickra_macd_histogram_new(uintptr_t fast, uintptr_t slow, uintptr_t signal);
double wickra_macd_histogram_update(struct MacdHistogram *handle, double value);
void wickra_macd_histogram_batch(struct MacdHistogram *handle,
                                 const double *input,
                                 double *out,
                                 uintptr_t n);
void wickra_macd_histogram_reset(struct MacdHistogram *handle);
void wickra_macd_histogram_free(struct MacdHistogram *handle);
struct MartinRatio *wickra_martin_ratio_new(uintptr_t period);
double wickra_martin_ratio_update(struct MartinRatio *handle, double value);
void wickra_martin_ratio_batch(struct MartinRatio *handle,
                               const double *input,
                               double *out,
                               uintptr_t n);
void wickra_martin_ratio_reset(struct MartinRatio *handle);
void wickra_martin_ratio_free(struct MartinRatio *handle);
struct MaxDrawdown *wickra_max_drawdown_new(uintptr_t period);
double wickra_max_drawdown_update(struct MaxDrawdown *handle, double value);
void wickra_max_drawdown_batch(struct MaxDrawdown *handle,
                               const double *input,
                               double *out,
                               uintptr_t n);
void wickra_max_drawdown_reset(struct MaxDrawdown *handle);
void wickra_max_drawdown_free(struct MaxDrawdown *handle);
struct McGinleyDynamic *wickra_mc_ginley_dynamic_new(uintptr_t period);
double wickra_mc_ginley_dynamic_update(struct McGinleyDynamic *handle, double value);
void wickra_mc_ginley_dynamic_batch(struct McGinleyDynamic *handle,
                                    const double *input,
                                    double *out,
                                    uintptr_t n);
void wickra_mc_ginley_dynamic_reset(struct McGinleyDynamic *handle);
void wickra_mc_ginley_dynamic_free(struct McGinleyDynamic *handle);
struct MedianAbsoluteDeviation *wickra_median_absolute_deviation_new(uintptr_t period);
double wickra_median_absolute_deviation_update(struct MedianAbsoluteDeviation *handle,
                                               double value);
void wickra_median_absolute_deviation_batch(struct MedianAbsoluteDeviation *handle,
                                            const double *input,
                                            double *out,
                                            uintptr_t n);
void wickra_median_absolute_deviation_reset(struct MedianAbsoluteDeviation *handle);
void wickra_median_absolute_deviation_free(struct MedianAbsoluteDeviation *handle);
struct MedianMa *wickra_median_ma_new(uintptr_t period);
double wickra_median_ma_update(struct MedianMa *handle, double value);
void wickra_median_ma_batch(struct MedianMa *handle, const double *input, double *out, uintptr_t n);
void wickra_median_ma_reset(struct MedianMa *handle);
void wickra_median_ma_free(struct MedianMa *handle);
struct MidPoint *wickra_mid_point_new(uintptr_t period);
double wickra_mid_point_update(struct MidPoint *handle, double value);
void wickra_mid_point_batch(struct MidPoint *handle, const double *input, double *out, uintptr_t n);
void wickra_mid_point_reset(struct MidPoint *handle);
void wickra_mid_point_free(struct MidPoint *handle);
struct Mom *wickra_mom_new(uintptr_t period);
double wickra_mom_update(struct Mom *handle, double value);
void wickra_mom_batch(struct Mom *handle, const double *input, double *out, uintptr_t n);
void wickra_mom_reset(struct Mom *handle);
void wickra_mom_free(struct Mom *handle);
struct OmegaRatio *wickra_omega_ratio_new(uintptr_t period, double threshold);
double wickra_omega_ratio_update(struct OmegaRatio *handle, double value);
void wickra_omega_ratio_batch(struct OmegaRatio *handle,
                              const double *input,
                              double *out,
                              uintptr_t n);
void wickra_omega_ratio_reset(struct OmegaRatio *handle);
void wickra_omega_ratio_free(struct OmegaRatio *handle);
struct PainIndex *wickra_pain_index_new(uintptr_t period);
double wickra_pain_index_update(struct PainIndex *handle, double value);
void wickra_pain_index_batch(struct PainIndex *handle,
                             const double *input,
                             double *out,
                             uintptr_t n);
void wickra_pain_index_reset(struct PainIndex *handle);
void wickra_pain_index_free(struct PainIndex *handle);
struct PercentB *wickra_percent_b_new(uintptr_t period, double multiplier);
double wickra_percent_b_update(struct PercentB *handle, double value);
void wickra_percent_b_batch(struct PercentB *handle, const double *input, double *out, uintptr_t n);
void wickra_percent_b_reset(struct PercentB *handle);
void wickra_percent_b_free(struct PercentB *handle);
struct PercentageTrailingStop *wickra_percentage_trailing_stop_new(double percent);
double wickra_percentage_trailing_stop_update(struct PercentageTrailingStop *handle, double value);
void wickra_percentage_trailing_stop_batch(struct PercentageTrailingStop *handle,
                                           const double *input,
                                           double *out,
                                           uintptr_t n);
void wickra_percentage_trailing_stop_reset(struct PercentageTrailingStop *handle);
void wickra_percentage_trailing_stop_free(struct PercentageTrailingStop *handle);
struct Pmo *wickra_pmo_new(uintptr_t smoothing1, uintptr_t smoothing2);
double wickra_pmo_update(struct Pmo *handle, double value);
void wickra_pmo_batch(struct Pmo *handle, const double *input, double *out, uintptr_t n);
void wickra_pmo_reset(struct Pmo *handle);
void wickra_pmo_free(struct Pmo *handle);
struct PolarizedFractalEfficiency *wickra_polarized_fractal_efficiency_new(uintptr_t period,
                                                                           uintptr_t smoothing);
double wickra_polarized_fractal_efficiency_update(struct PolarizedFractalEfficiency *handle,
                                                  double value);
void wickra_polarized_fractal_efficiency_batch(struct PolarizedFractalEfficiency *handle,
                                               const double *input,
                                               double *out,
                                               uintptr_t n);
void wickra_polarized_fractal_efficiency_reset(struct PolarizedFractalEfficiency *handle);