bindings/csharp/Wickra/Generated/NativeMethods.g.cs


    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_lin_reg_intercept_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_lin_reg_intercept_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_lin_reg_intercept_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_lin_reg_intercept_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_lin_reg_slope_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_lin_reg_slope_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_lin_reg_slope_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_lin_reg_slope_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_lin_reg_slope_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_log_return_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_log_return_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_log_return_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_log_return_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_log_return_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_m2_measure_new(nuint period, double riskFree, double benchmarkStddev);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_m2_measure_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_m2_measure_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_m2_measure_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_m2_measure_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_macd_histogram_new(nuint fast, nuint slow, nuint signal);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_macd_histogram_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_macd_histogram_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_macd_histogram_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_macd_histogram_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_martin_ratio_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_martin_ratio_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_martin_ratio_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_martin_ratio_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_martin_ratio_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_max_drawdown_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_max_drawdown_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_max_drawdown_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_max_drawdown_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_max_drawdown_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_mc_ginley_dynamic_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_mc_ginley_dynamic_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_mc_ginley_dynamic_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_mc_ginley_dynamic_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_mc_ginley_dynamic_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_median_absolute_deviation_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_median_absolute_deviation_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_median_absolute_deviation_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_median_absolute_deviation_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_median_absolute_deviation_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_median_ma_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_median_ma_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_median_ma_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_median_ma_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_median_ma_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_mid_point_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_mid_point_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_mid_point_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_mid_point_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_mid_point_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_mom_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_mom_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_mom_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_mom_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_mom_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_omega_ratio_new(nuint period, double threshold);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_omega_ratio_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_omega_ratio_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_omega_ratio_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_omega_ratio_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_pain_index_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_pain_index_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_pain_index_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_pain_index_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_pain_index_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_percent_b_new(nuint period, double multiplier);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_percent_b_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_percent_b_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_percent_b_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_percent_b_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_percentage_trailing_stop_new(double percent);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_percentage_trailing_stop_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_percentage_trailing_stop_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_percentage_trailing_stop_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_percentage_trailing_stop_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_pmo_new(nuint smoothing1, nuint smoothing2);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_pmo_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_pmo_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_pmo_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_pmo_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_polarized_fractal_efficiency_new(nuint period, nuint smoothing);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_polarized_fractal_efficiency_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_polarized_fractal_efficiency_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_polarized_fractal_efficiency_reset(nint handle);
